--- a/redeme.html
+++ b/redeme.html
@@ -1,17 +1,17 @@
-====LNMP一键YUM安装包====
+====LNMP一键YUM安装包====<br>
 
-作者:吴骏飞(github:alexethangit)
+作者:吴骏飞(github:alexethangit)<br>
 
-如无作者授权,请勿将脚本用于其他用途
+如无作者授权,请勿将脚本用于其他用途<br>
 
-该脚本版权归作者所有,请勿对外共享
+该脚本版权归作者所有,请勿对外共享<br>
 
-注意:
+注意:<br>
 
-1.本脚本仅适用于CentOS6.5版本
+1.本脚本仅适用于CentOS6.5版本<br>
 
-2.本脚本非编译安装版本,为rpm包安装版本
+2.本脚本非编译安装版本,为rpm包安装版本<br>
 
-3.本脚本不包含优化内容,具体使用请咨询作者
+3.本脚本不包含优化内容,具体使用请咨询作者<br>
 
 4.请在初始安装的CentOS6.5-Basic Server上运行该脚本
